<resources>
    <string name="app_name">MissTimer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_info">By clicking Sign up, you agree to our Terms and Privacy Policy and also agree to receiving updates via push notification.</string>
    <string name="email_sign_up">Enter your email</string>
    <string name="sign_up_password">Create your password</string>
    <string name="sign_up_birthday">Date of Birthday</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="memo_hint">Add your memo about this product</string>
    <string name="item_name">Enter item name</string>
    <string name="dateformat">DD/MM/YYYY</string>
    <string name="openedstatus">Opened or not</string>
    <string name="after_opening_use">After opening use: </string>
    <string name="expiration_date">Expiration date: </string>
    <string name="open_date">Open date: </string>
    <string name="save">Save</string>
    <string name="open_status">Open Status</string>
    <string name="caption">Wrire a caption...</string>
    <string name="memo">Add your product memo</string>
    <string name="product_name">Product name</string>
    <string name="btnDelete"> Delete </string>
</resources>
